# karsa-claude-trading

./: .claudeignore  .dockerignore  .env.example  .gitignore  9router-config.yaml  AGENTS.md  AGENTS.md.backup  CLAUDE.md  CLAUDE.md.backup  Dockerfile.bot  Dockerfile.orchestrator  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  mcp_server.py  parse_logs.py  parse_logs_final.py  pyproject.toml  scratch_patch_test.py  scratch_test.py  scratch_test_regime.py  scratch_warp_test.py  test_regime.py
.claude/agents/: idx_analyst.md  risk_manager.md
.claude/plans/: audit-v3-implementation.plan.md  redesign-handlers.plan.md
db/: init.sql
db/migrations/: add_adaptive_research_tables.sql  add_aode_tables.sql  add_autonomous_session.sql  add_crypto_lifecycle_tables.sql  add_crypto_market.sql  add_performance_gate_columns.sql  add_pgvector_memory.sql  add_risk_profile.sql  add_scale_in_column.sql  add_universe_history.sql  add_volatility_regime_column.sql
docs/: ASM_Enhancements.md  AUDIT-RESULT.md  AUDIT_CLAUDE.md  AUDIT_GROK.md  AUDIT_KARSA_CRYPTO_BOT.md  DESIGN_CRYPTO_UNIVERSE_INTEGRATION.md  DESIGN_OPTION_RISK_PROFILE.md  DESIGN_TEXT_TELEGRAM.md  DYNAMIC_CRYPTO_RESEARCH_PLAN.md  IMPLEMENTATION_PLAN_1.md  Karsa_Architecture_Validation_Report.md  METRICS_IMPLEMENTATION_SUMMARY.md  METRIC_REVIEW.md  METRIC_WIRED.md  OPTIMIZE_UNIVERSE.md  PROFIT_PROTECTION_DYNAMIC_EXIT_ENGINE.md  QWEN_DESIGN_1.md  QWEN_RESPONSE.md  REDESIGN_HANDLER.md  REVIEW_QWEN_2JUL.md  architecture.html  audit-26Jun.md  monitoring_design.md
docs/archive/: ALERT_TELEGRAM.md  AUDIT_ASM.md  AUDIT_CLAUDE_2.md  AUDIT_KARSA_3.md  AUDIT_METRIC.md  AUDIT_QWEN.md  AUDIT_QWEN_2.md  AUDIT_REVIEW_GROK_2JUL.md  AUDIT_REVIEW_QWEN_2JUL.md  AUTONOMOUS_CAMPAIGN_MODE.md  DATABASE_AUDIT.md  DATABASE_AUDIT_WALKTHROUGH.md  DESIGN.md  GROK_REVIEW.md  (+37 more)
monitoring/: alertmanager.yml  asm-core-operations.json  asm-core-operations.json.bak  asm-dashboard.json  grafana-dashboard.json  prometheus.yml
scripts/: crypto_bot_tests.sh  fix_position_duplicates.sql  infra_health_check.sh  monitor_trailing_stops.py
src/: config.py  main.py  main_crypto.py  patch_websocket.py
tests/: conftest.py
(+212 files in other folders)
