[project]
name = "karsa-trading"
version = "0.1.0"
description = "AI-driven multi-market trading system for IDX and US equities"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "python-telegram-bot[ext]>=21.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "redis>=5.0.0",
    "apscheduler>=3.10.0",
    "structlog>=24.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
backtest = ["vectorbt>=0.26.0"]
idx = ["stockbit-api>=0.1.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "pytest-cov>=5.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
