[project]
name = "karsa-trading"
version = "0.1.0"
description = "AI-driven multi-market trading system for IDX and US equities"
requires-python = ">=3.11"

dependencies = [
    "anthropic>=0.56.0",
    "python-telegram-bot[ext]>=21.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "redis[hiredis]>=5.0.0",
    "apscheduler>=3.10.0",
    "structlog>=24.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "tradingview_ta>=3.1.0",
    "pybit>=5.7.0",
    "pysocks>=1.7.1",
]

[project.optional-dependencies]

migrations = [
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
]

backtest = [
    "vectorbt>=0.26.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
